@@ -39,7 +39,7 @@ public class Day04 implements AdventOfCodeSolver {
 
         for (String card : cards) {
             List<String> cardList = Arrays.asList(card.split(":|\\|"));
-            String id = cardList.get(0).replace("Card", "").strip();
+            String id = cardList.getFirst().replace("Card", "").strip();
             List<String> winningNumbers = Arrays.asList(cardList.get(1).strip().split(" +"));
             List<String> yourNumbers = Arrays.asList(cardList.get(2).strip().split(" +"));
 
@@ -80,7 +80,7 @@ public class Day04 implements AdventOfCodeSolver {
 
         private Card(String input) {
             List<String> cardInfo = Arrays.asList(input.split(":|\\|"));
-            this.cardId = Integer.parseInt(cardInfo.get(0).replace("Card", "").strip());
+            this.cardId = Integer.parseInt(cardInfo.getFirst().replace("Card", "").strip());
             this.winningNumbers = Arrays.asList(cardInfo.get(1).strip().split(" +"));
             this.yourNumbers = Arrays.asList(cardInfo.get(2).strip().split(" +"));
             this.cardWinningNumbers =
